--- a/sites/all/themes/zwerm/sass/tabs.scss
+++ b/sites/all/themes/zwerm/sass/tabs.scss
@@ -17,16 +17,14 @@
   .tabs
   {
     background-color: $footer-color;
-    width:100%;
+    width:96%;
     float: left;
     height:$score-navbar-height;
     margin-top: 0px;
-    //margin-left: -10px;
     display: block;
     padding-left: 2%;
     padding-right: 2%;
     line-height: 0.8em;
-
 
 
     li
